# LuaPluginSystem

./: CMakeLists.txt
lib/lua-5.4.6/: CMakeLists.txt
src/: Plugin.cpp  PluginManager.cpp  main.cpp  util.cpp
src/head/: cpphead.h  cpphead.hpp  include.h  include.hpp  model.h  model.hpp
src/head/model/: Plugin.hpp  PluginManager.hpp  Printer.hpp  Property.hpp  util.h  util.hpp
